# non_local_prior

./: .gitignore  01_exploration.ipynb  Pipfile  pyproject.toml
non_local_prior/: bayes_factor.py  inverse_moment_prior.py  likelihood.py  normal_moment_prior.py
test/unit/: test_bayes_factor.py  test_normal_moment_prior.py
