[tool.poetry]
name = "non_local_prior"
version = "0.1.0"
description = "Bayesian A/B testing using non-local priors."
authors = ["Anonymous Authors"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.5"
scipy = "^1.6.0"
matplotlib = "^3.3.3"
jupyter = "^1.0.0"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
